# ChangeLog for sys-kernel/dracut
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Apr 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Call emake doc in src_compile().  Install html doc in src_install().

  26 Apr 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Synced with sys-kernel/dracut-018::gentoo. Moreover I've added asciidoc build
  dependency and removed use of WITH_SWITCH_ROOT variables.

  26 Apr 2012; Amadeusz Żołnowski <aidecoe@gentoo.org>
  files/dracut-9999-multipath-udev-rules.patch:
  Rebased multipath-udev-rules.patch against current dracut git-HEAD.

  25 Mar 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Synced with sys-kernel/dracut-017-r1::gentoo again.

  02 Mar 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild,
  -files/dracut-9999-usrmount-fsck-fix.patch, metadata.xml:
  Synced with sys-kernel/dracut-017-r1::gentoo.

  12 Jan 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild,
  +files/dracut-9999-usrmount-fsck-fix.patch:
  Test fix for bug #396575.

  12 Jan 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Synced with sys-kernel/dracut-014 in Portage tree.

  24 Nov 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Reverted URI to git.kernel.org.

  Removed no-herd btw.

  22 Sep 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Changed git.kernel.org URL temporary to upstream's mirror for kernel.org
  down-time.

  07 Sep 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Synced with sys-kernel/dracut-013 in Portage tree.

  10 Aug 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
  Updated to changes after 011 release:
  - adding/removing modules
  - repo has been moved from sf.net to kernel.org

  Moreover ebuild has been migrated to git-2 eclass.

  07 Mar 2011; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild,