@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Jun 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
+  sys-kernel/dracut-9999: synced with sys-kernel/dracut-019::gentoo
+
   26 Apr 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> dracut-9999.ebuild:
   Call emake doc in src_compile().  Install html doc in src_install().
 
